hphp/hack/test/typecheck/splat/variadic_readonly.php.exp
ERROR: File "variadic_readonly.php", line 3, characters 28-45:
Variadic parameters cannot be marked readonly (Parsing[1002])
ERROR: File "variadic_readonly.php", line 3, characters 58-79:
Variadic parameters cannot be marked readonly (Parsing[1002])
