hphp/hack/test/typecheck/splat/variadic_readonly.php
<?hh

function foo((function(int,readonly string...):void) $f, readonly bool... $args):void { }
